# jbl-suno-dj

./: .env.example  .gitignore  README.md  SPEECH_RECOGNITION_SETUP.md  automated_suno.sh  basic_test.py  complete_suno_workflow.sh  debug_status_check.py  debug_voice.py  debug_voice_verbose.py  download_music.py  fix_jbl_connection.py  generate_and_download.py  network_diagnostics.py  pyproject.toml  quick_status_test.py  quick_suno_test.py  requirements.txt  robust_suno_client.py  run_full_workflow.py  setup_speech_recognition.py  simple_suno_test.py  simple_sunoapi_test.py  simple_voice_test.py  simple_workflow_test.py  standalone_downloader.py  stream_suno_player.sh  suno_poc.py  suno_stream_player.py  sunoapi_poc.py  test_complete_workflow.py  test_complete_workflow_debug.py  test_crash_fix.py  test_environment.py  test_fixed_voice.py  test_fixed_workflow.py  test_full_workflow.py  test_jbl_audio.py  test_openai_quota.py  test_speech_services.py  (+9 more)
src/voice2suno/: __init__.py  config.py  poc_app.py  suno_client.py
tests/: __init__.py  test_config.py  test_poc_app.py  test_suno_client.py
