[tool.poetry]
name = "jbl-suno-dj"
version = "0.1.0"
description = "Hands-free voice → Suno AI song generator via JBL speaker"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
sounddevice = "^0.4"
numpy = "^1.26"
ffmpeg-python = "^0.2"
requests = "^2.31"
python-dotenv = "^1.0"
click = "^8.1"
rich = "^13.7"
urllib3 = "^2.0"
certifi = "^2023.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
